refactor/style: some optimization